syntax = "proto3";

package interfaces;

enum InterfaceType {
    SOFTWARE_LOOPBACK = 0;
    ETHERNET_CSMACD = 1;
    MEMORY_INTERFACE = 2;
    TAP_INTERFACE = 3;
    AF_PACKET_INTERFACE = 4;
    VXLAN_TUNNEL = 5;
};

message Interfaces {
    message Interface {
        string name = 1;
        string description = 2;
        InterfaceType type = 3;
        bool enabled = 4;
        string phys_address = 5;
        uint32 mtu = 6;
        uint32 vrf = 7;

        // Required format is "ipAddress/ipPrefix"
        repeated string ip_addresses = 10;

        message Memif {
            enum MemifMode {
                ETHERNET = 0;
                IP = 1;
                PUNT_INJECT = 2;
            }
            bool master = 1;
            MemifMode mode = 2;
            uint32 id = 3;
            string socket_filename = 4;
            string secret = 5;
            uint32 ring_size = 6;
            uint32 buffer_size = 7;
            uint32 rx_queues = 8;
            uint32 tx_queues = 9;
        }
        Memif memif = 101;

        message Vxlan {
            string src_address = 1;  /* source VTEP address */
            string dst_address = 2;  /* destination VTEP address */
            uint32 vni = 3;          /* VXLAN Network Identifier */
        }
        Vxlan vxlan = 102; /* VXLAN interface settings */

        message Afpacket {
            string host_if_name = 1; /* name of the host interface to bind to */
        }
        Afpacket afpacket = 103;

        message Tap {
            string host_if_name = 1; /* name of the tap interface in the host OS */
        }
        Tap tap = 104;
    };
    repeated Interface interface = 1;
};


message InterfacesState {
    message Interface {
        enum Status {
            UNKNOWN_STATUS = 0;
            UP = 1;
            DOWN = 2;
            DELETED = 3;
        };
        enum Duplex {
            UNKNOWN_DUPLEX = 0;
            HALF = 1;
            FULL = 2;
        };
        string name = 1;
        string internal_name = 2;
        InterfaceType type = 3;
        uint32 if_index = 4;
        Status admin_status = 5;
        Status oper_status = 6;
        int64 last_change = 7;
        string phys_address = 8;
        uint64 speed = 9;
        uint32 mtu = 10;
        Duplex duplex = 11;

        message Statistics {
            uint64 in_packets = 1;
            uint64 in_bytes = 2;
            uint64 out_packets = 3;
            uint64 out_bytes = 4;
            uint64 drop_packets = 5;
            uint64 punt_packets = 6;
            uint64 ipv4_packets = 7;
            uint64 ipv6_packets = 8;
            uint64 in_nobuf_packets = 9;
            uint64 in_miss_packets = 10;
            uint64 in_error_packets = 11;
            uint64 out_error_packets = 12;
        }
        Statistics statistics = 100;
    }
    repeated Interface interface = 1;
}

message InterfaceErrors {
    message Interface {                     /* List of interfaces with errors */
        string interface_name = 1;
        message ErrorData {                 /* List of errors (if there are more) for every interface */
            string change_type = 1;
            string error_message = 2;
            int64 last_change = 3;
        }
        repeated ErrorData error_data = 2;
    }
    repeated Interface interface = 1;
}